# personalisert-monitor

./: .env.mal  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  test_secret_detection.txt  vault_skriver_dokumentasjon.md  wiki.sh
.github/workflows/: secrets-scan.yml
docs/: oppsett.md  vault-mappestruktur.md
github_wiki/: github_wiki_vault_skriver_py.md  kjører_py_dokumentasjon.md  obsidian_vakt_py_dokumentasjon.md  rss_py_dokumentasjon.md  vault_skriver_py_dokumentasjon.md
konfig/: kilder.yaml
notebooks/: artikkeloversikt.ipynb  datakontroll.ipynb
specs/: les-meg.md  regulatorisk-kontekst.md  teknologi.md  veikart.md  visjon.md
specs/features/2026-04-21-a0-fundament/: plan.md  requirements.md  validation.md
specs/features/2026-04-22-a0b-obsidian-web-clipper/: VERIFICATION.md  plan.md  requirements.md  validation.md
specs/features/2026-04-23-a1-rss-innhenting/: plan.md  requirements.md  validation.md
specs/features/2026-04-23-artikkel-sletting/: plan.md  requirements.md  validation.md
specs/features/2026-04-23-pdf-innhenting/: plan.md  requirements.md  validation.md
specs/features/2026-04-24-a2b-triplet-lager-vurderingsapp/: plan.md  requirements.md  validation.md
specs/features/2026-04-24-sammendragsmodul/: plan.md  requirements.md  validation.md  validation_a2b.md
src/intelligence_monitor/: opik_konfig.py
tester/: test_artikkel_sletting.py  test_db_init.py  test_lag_sammendrag.py  test_obsidian_vakt_oppstart.py  test_pdf_innhenting.py  test_rss.py  test_triplet_lager.py  test_vault_skriver.py
tester/konfig/: fixtures.py
(+13 files in other folders)
