[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelligence-monitor"
version = "0.0.1"
description = "AI-drevet beslutningsstøttesystem for kunnskapsarbeidere"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "streamlit>=1.40.0",
    "opik>=1.0.0",
    "openai-whisper>=20240930",
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "yt-dlp>=2024.11.18",
    "youtube-transcript-api>=0.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/intelligence_monitor"]
